--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,3 +6,10 @@ updates:
       interval: "daily"
     commit-message:
       prefix: "Submodule Update"
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: "GitHub Actions Updates"
